@@ -12,6 +12,7 @@ linotp (3.1~0dev-0) experimental; urgency=low
   Improvement:
   * Simplify the HMAC acountname and tokenissuer fallback rules for a more predictable
     behavior in the google authenticator url.
+  * Token monitoring now better sanitizes the status parameter
 
   Fixes:
   * motp tokens can now be used in challenge response mode
